<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="icon">Icon</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Поставить лайк</string>
    <string name="description_post_share">Поделиться постом</string>
    <string name="description_post_views">Просмотры</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post">Edit post</string>
    <string name="edit_icon">Edit icon</string>
    <string name="video_preview">Video preview</string>
    <string name="play">Play</string>
    <string name="video">Video</string>
    <string name="add_post">Add post</string>
    <string name="google_api_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\\\'s post</string>
    <string name="notification_new_post">%1$s published a new post</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="no_posts">No posts</string>
    <string name="image_preview" />
    <string name="new_posts">New posts</string>
    <string name="image_pick_error">Image pick error</string>
    <string name="logout">Logout</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="sign_in">Sign In</string>
</resources>