<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".activity.FeedFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar"
        android:src="@drawable/ic_netology"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_more_vert_24"
        android:checkable="true"
        style="@style/Style.MenuButton"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <FrameLayout
        android:id="@+id/video_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <ImageView
            android:id="@+id/iv_video_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/video_preview"
            android:paddingTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_video_preview" />

        <ImageButton
            android:id="@+id/ib_video_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_baseline_play_arrow_24" />

        <TextView
            android:id="@+id/tv_video_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:background="#80000000"
            android:padding="4dp"
            android:text="@string/video"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="video_preview"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ic_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:icon="@drawable/ic_like"
        android:checkable="true"
        style="@style/Style.LikeButton"
        tools:text="15"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ic_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_share_24"
        android:checkable="true"
        style="@style/Style.OtherButton"
        tools:text="10"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/ic_like"
        app:layout_constraintStart_toEndOf="@+id/ic_like"
        app:layout_constraintTop_toTopOf="@+id/ic_like"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ic_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:icon="@drawable/ic_baseline_visibility_24"
        android:checkable="false"
        style="@style/Style.OtherButton"
        tools:text="5"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>